--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "laby"
 dynamic = ["version"]
-description = "A CLI tool for running simulations"
+description = "Labyrinth Python SDK"
 readme = "README.md"
-authors = [{name = "Your Name", email = "your.email@example.com"}]
+authors = [{name = "James Sha", email = "james@laby.ai"}]
 license = {text = "MIT"}
 classifiers = [
     "Programming Language :: Python :: 3",
